# carcinusdb

./: .gitignore  Cargo.toml  README.md
benches/: cache_bench.rs
crates/carcinusdb/: Cargo.toml
crates/carcinusdb/src/: lib.rs  main.rs
crates/carcinusdb/src/database/: mod.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
src/: error.rs  lib.rs  main.rs  os.rs
src/cli/: mod.rs  validators.rs
src/database/: config.rs  metadata.rs  mod.rs  schema.rs
src/pager/: io.rs  mod.rs
src/sql/: analyzer.rs  mod.rs  optimizer.rs  parser.rs  prepare.rs  record.rs  schema.rs  statement.rs  token.rs  tokenizer.rs
src/sql/parser/: mod.rs  statement.rs  token.rs  tokenizer.rs
src/sql/types/: mod.rs  serial.rs  text.rs
src/storage/: allocator.rs  btree.rs  buffer_pool.rs  cache.rs  database.rs  file_system_manager.rs  metadata.rs  mod.rs  page.rs  pager.rs
src/storage/cache/: mod.rs
src/storage/heap/: block_manager.rs  fsm.rs  manager.rs  mod.rs  page.rs
src/storage/schema/: column.rs  index.rs  mod.rs  parse.rs  table.rs
src/storage/wal/: locks.rs  mod.rs  transaction.rs
src/tcp/: client.rs  mod.rs  protocol.rs  server.rs
src/tcp/server/: connection.rs  mod.rs
src/utils/: buffer.rs  bytes.rs  cast.rs  concurrency.rs  debug_table.rs  io.rs  lock.rs  mod.rs  traits.rs
src/vm/: ddl.rs  dml.rs  expression.rs  mod.rs  operator.rs  planner.rs  query_result.rs  seq_scan.rs
src/vm/dml/: delete.rs  insert.rs  mod.rs  select.rs  update.rs
src/vm/operator/: collect.rs  filter.rs  index_scan.rs  mod.rs  projection.rs  seq_scan.rs  sort.rs
tests/: mod.rs
(+30 files in other folders)
