[package]
name = "carcinusdb"
version = "0.1.0"
edition = "2024"

[dependencies]

simple_logger = "5.0"
log = "0.4"
dotenvy = "0.15.7"

thiserror = "2.0.12"
anyhow = "1.0.97"

tokio = { version = "1.44.1", features = ["full"] }
bytes = "1.10.1"

libc = "0.2.171"

crossbeam = "0.8.4"
dashmap = "6.1.0"
parking_lot = "0.12.3"

[dev-dependencies]
criterion = "0.5"
