[package]
name = "carcinusdb"
version = "0.1.0"
edition = "2024"

[dependencies]

simple_logger = "5.0"
log = "0.4"
dotenvy = "0.15.7"

thiserror = "2.0.12"
anyhow = "1.0.97"

tokio = { version = "1.44.1", features = ["full"] }

libc = "0.2.171"

crossbeam = "0.8.4"
dashmap = "6.1.0"
parking_lot = "0.12.3"
hashbrown = "0.16.1"
arc-swap = "1.8.2"

[dev-dependencies]
criterion = "0.8.1"
rand = "0.9.2"

# [[bench]]
# name = "cache_bench"
# harness = false
